After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660073 - Don't spam .xsession-errors about found devices
Don't spam .xsession-errors about found devices
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-25 18:28 UTC by Matthias Clasen
Modified: 2011-09-27 09:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't spam .xsession-errors about found devices (1.12 KB, patch)
2011-09-25 18:28 UTC, Matthias Clasen
none Details | Review

Description Matthias Clasen 2011-09-25 18:28:09 UTC
I'm seeing

common-plugin-Message: checking whether we have a device for 4: yes
common-plugin-Message: checking whether we have a device for 5: yes
common-plugin-Message: checking whether we have a device for 6: yes
common-plugin-Message: checking whether we have a device for 7: yes
common-plugin-Message: checking whether we have a device for 8: yes
common-plugin-Message: checking whether we have a device for 9: yes
common-plugin-Message: checking whether we have a device for 10: yes
common-plugin-Message: checking whether we have a device for 11: yes
common-plugin-Message: checking whether we have a device for 12: yes
common-plugin-Message: checking whether we have a device for 13: yes

in my .xsession-errors. I don't think it is necessary of helpful
to show this unless --verbose is given.
Comment 1 Matthias Clasen 2011-09-25 18:28:10 UTC
Created attachment 197436 [details] [review]
Don't spam .xsession-errors about found devices

It is enough to do this in verbose mode.
Comment 2 Bastien Nocera 2011-09-26 16:00:34 UTC
That's left-over debug from the touchpad toggle issue, it should be removed.
Comment 3 Bastien Nocera 2011-09-27 09:21:57 UTC
commit 0722280e9d01600828e13148ee9370575406bc45
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Sep 27 10:20:21 2011 +0100

    common: Remove left-over debug
    
    Spotted by Matthias Clasen <mclasen@redhat.com>
    
    https://bugzilla.gnome.org/show_bug.cgi?id=660073